ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/generatorInAmbientContext2/input.ts.stderr
error[1221]: Generators are not allowed in an ambient context.
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/generatorInAmbientContext2/input.ts:3:14
  |
3 |     function *generator(): any;
  |              ^

